--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!<br/>
-  test
+  test<br/>
+  test2
 </p>
 
 </body>
